--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"sveltekit-superforms": "^2.12.5",
 		"tailwindcss": "^3.3.6",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^1.2.0"
+		"vitest": "^1.2.0",
+		"zod": "^3.22.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -44,9 +46,7 @@
 		"formsnap": "^1.0.0",
 		"lucide-svelte": "^0.368.0",
 		"svelte-sonner": "^0.3.22",
-		"sveltekit-superforms": "^2.12.4",
 		"tailwind-merge": "^2.2.2",
-		"tailwind-variants": "^0.2.1",
-		"zod": "^3.22.4"
+		"tailwind-variants": "^0.2.1"
 	}
 }
